objects/Data_Interface_Team__c.object
<CustomObject>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accums_Ded_OOP_LTM_Etc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accums (Ded/OOP/LTM/Etc)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_For_IBM_IT_Prod__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval For IBM/IT Prod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_BPDs_Rcvd_For_Inhouse_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved BPDs Rcvd For Inhouse Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_BPDs_Received_For_EAV_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved BPDs Received For EAV Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Group_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Group Structure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bagging_Profile_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bagging Profile Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDHCVNSL_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHCVNSL Geno CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDHPLVSL_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHPLVSL Geno CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Moved_To_EDS1_Obtain_Apprl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSR Moved To EDS1/Obtain Apprl</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Stop_For_EAV_Commingle__c</fullName>
        <label>Claim Stop For EAV Commingle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Stop_For_Hx_Conv_Init__c</fullName>
        <label>Claim Stop For Hx Conv Init</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Stop_For_Inhouse_Commingle__c</fullName>
        <label>Claim Stop For Inhouse Commingle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Stop_For_Mental_Health_Commingle__c</fullName>
        <label>Claim Stop For Mental Health Commingle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Stop_For_Pharmacy_Commingle__c</fullName>
        <label>Claim Stop For Pharmacy Commingle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Codes_Impacted_By_Stop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Codes Impacted By Stop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copay_Only_AMT_Commingled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Only AMT Commingled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correct_Hx_Conv_File_Resend__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correct Hx Conv File/Resend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Medical_Test_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Create Medical Test Claims</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Sub_ID_Crosswalk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Create Sub ID Crosswalk</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIT_Overall_Status__c</fullName>
        <label>DIT Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataset_Names_For_HC_Files__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dataset Names For HC Files</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_File_Received_From_Prior_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date File Received From Prior Carrier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HEQ_Requirement_Form_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date HEQ Requirement Form Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hx_Conv_Init_File_Sent_To_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Hx Conv Init File Sent To IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inbound_HEQ_Trigger_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Inbound HEQ Trigger File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Internal_Accum_Hx_Conv_Sent_To_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Internal Accum Hx Conv Sent To IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pharmacy_Commingle_Sent_To_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Pharmacy Commingle Sent To IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Prod_Screen_Print_On_Share_Drive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Prod Screen Print On Share Drive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reply_Received_From_Prior_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Reply Received From Prior Carrier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Claims_File_Sent_To_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test Claims File Sent To Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ded_Max_Spreadsheet_From_BC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ded/Max Spreadsheet From BC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ded_OPP_Amount_Commingled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ded/OPP Amount Commingled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ded_Only_AMT_Commingled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ded Only AMT Commingled</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Determine_MH_Commingle_Record_Layout__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determine MH Commingle Record Layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Determine_Run_Out_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determine Run Out Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Determine_Rx_Commingle_Record_Layout__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determine Rx Commingle Record Layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Determine_Vendor_Elg_Record_Layout__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Determine Vendor Elg Record Layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_NASCO_Commingle_Apply__c</fullName>
        <label>Does NASCO Commingle Apply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_NASCO_Non_Commingle_Apply__c</fullName>
        <label>Does NASCO Non Commingle Apply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_WGS_Commingle_Apply__c</fullName>
        <label>Does WGS Commingle Apply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_WGS_Non_Commingle_Apply__c</fullName>
        <label>Does WGS Non Commingle Apply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAVDLOVR_Geno_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAVDLOVR Geno CSR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_4th_Quarter_Ded_Carry_Over__c</fullName>
        <label>EAV Commingle 4th Quarter Ded Carry Over</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Claim_Stop_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Claim Stop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Claim_Stop_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Claim Stop Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Claim_Stop_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Claim Stop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Client_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Client ID Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Copay_Only_Commingled__c</fullName>
        <label>EAV Commingle Copay Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Ded_OPP_Commingled__c</fullName>
        <label>EAV Commingle Ded/OPP Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Ded_Only_Commingled__c</fullName>
        <label>EAV Commingle Ded Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_LTM_Commingled__c</fullName>
        <label>EAV Commingle LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_NIO_CS_Op_Log_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle NIO/CS Op Log/SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_OPP_Only_Commingled__c</fullName>
        <label>EAV Commingle OPP Only Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Of_Work_Effort_Completed__c</fullName>
        <label>EAV Commingle % Of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Ops  Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual EAV Commingle Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Table_Update_Only__c</fullName>
        <label>EAV Commingle Table Update Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Test_IDs_Sent_To_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Test IDs Sent To IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Testing_Required__c</fullName>
        <label>EAV Commingle Testing Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Vendor_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Vendor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Vendor_Name__c</fullName>
        <label>EAV Commingle Vendor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beacon Health BH</fullName>
                </value>
                <value>
                    <fullName>CVS/Caremark</fullName>
                </value>
                <value>
                    <fullName>Magellan BH</fullName>
                </value>
                <value>
                    <fullName>Optum BH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Vendor_Status__c</fullName>
        <label>EAV Commingle Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAV_Commingle_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAV Commingle Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EAV_Infertility_LTM_Commingled__c</fullName>
        <label>EAV Infertility LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Reports_Review_Verified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Reports Review/Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_EAV_Commingle_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated EAV Commingle Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_FSA_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated FSA Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_HRA_Transfers_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated HRA Transfers Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hx_Conv_Init_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Hx Conv Init Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hx_Conv_Sub_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Hx Conv Sub Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Inhouse_Commingle_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Inhouse Commingle Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Internal_Accum_Hx_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Internal Accum Hx Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_JAA_Commingle_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated JAA Commingle Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_JAA_Hx_Accum_Init_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated JAA Hx Accum Init Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_JAA_Hx_Accum_Sub_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated JAA Hx Accum Sub Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_MH_Health_Commingle_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated MH Health Commingle Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Pharmacy_Commingle_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Pharmacy Commingle Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Vendor_Eligibility_Prod_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Vendor Eligibility Prod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSA_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_File_Frequency__c</fullName>
        <label>FSA File Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSA_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Method_Of_Transmit__c</fullName>
        <label>FSA Method Of Transmit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>FTP/PGP</fullName>
                </value>
                <value>
                    <fullName>NDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSA_Op_Log_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Op Log / SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Ops  Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Vendor_Contact_Phone_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Vendor Contact Phone/Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Vendor_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Vendor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Vendor_Status__c</fullName>
        <label>FSA Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSA_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Watchlist Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSA_Work_Request_CR_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Work Request CR/SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_of_Work_Effort_Completed__c</fullName>
        <label>FSA % of Work Effort Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>File_Format_Distribution_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Format Distribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Grp_Strct_Plan_Design_HX_Conv_Init__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Grp Strct/Plan Design HX Conv Init</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Grp_Strct_Plan_Design_Int_Accum_Hx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Grp Strct/Plan Design Int Accum Hx</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Grp_Strct_Plan_Design_MH_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Grp Strct/Plan Design MH Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Grp_Strct_Plan_Design_Rx_Commingle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Grp Strct/Plan Design Rx Commingle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Format_Sub_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Format Sub File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUI_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GUI Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Group_Number__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEQ_Notified_Elig_Transmitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HEQ Notified Elig Transmitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRA_Transfer_CR_SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfer CR/SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_EBA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers EBA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_Eligibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_IT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers IT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_Ops_Open_Tx_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_Ops_Open_Tx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers Ops Open Tx</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HRA_Transfers_Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA Transfers Watchlist Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>